--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link href= "https://fonts.google.com/specimen/Open+Sans?selection.family=Open%20Sans&fbclid=IwAR3u5UgJlHQQnbHhdCgM2A0XMZle84uhP5MEf2YXdB0cr_O9H3Pe5rnscNM"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -26,6 +26,11 @@
     -->
     <title>React App</title>
   </head>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
