--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,6 +27,10 @@
     <title>React App</title>
   </head>
   <style>
+    *{
+      margin: 0;
+      padding: 0;
+    }
     html {
       scroll-behavior: smooth;
     }
