--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link href= "https://fonts.google.com/specimen/Open+Sans?selection.family=Open%20Sans&fbclid=IwAR3u5UgJlHQQnbHhdCgM2A0XMZle84uhP5MEf2YXdB0cr_O9H3Pe5rnscNM"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
